<resources>
    <string name="app_name">Study_Tracker</string>
    <string name="button_study_start">Start Study Session</string>
    <string name="button_study_stop">End Study Session</string>
    <string name="button_break_start">Start Break</string>
    <string name="button_break_stop">End Break</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_notes">Notes</string>
    <string name="hint_text_enter_notes">Enter notes</string>
    <string name="USER_NOTES"></string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="button_break_end">End Break</string>
    <string name="title_activity_end_study">EndStudyActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_study_end">Time studied:</string>
    <string name="button_restart">Start New Session</string>
    <string name="text_break_end">Time on break:</string>
    <string name="text_time_end">Total session time:</string>

</resources>